openshift_exports/cluster_export/bbitai-dev-2026-03-20T15_31_03Z/bbitai-dev/NetworkPolicy_networking.k8s.io_v1_bbitai-dev_allow-from-codeready-workspaces-operator.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    toolchain.dev.openshift.com/last-applied-configuration: '{"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"labels":{"toolchain.dev.openshift.com/provider":"codeready-toolchain","toolchain.dev.openshift.com/space":"bbitai"},"name":"allow-from-codeready-workspaces-operator","namespace":"bbitai-dev"},"spec":{"ingress":[{"from":[{"namespaceSelector":{"matchLabels":{"network.openshift.io/policy-group":"codeready-workspaces"}}}]}],"podSelector":{},"policyTypes":["Ingress"]}} [...]
  labels:
    toolchain.dev.openshift.com/provider: codeready-toolchain
    toolchain.dev.openshift.com/space: bbitai
  name: allow-from-codeready-workspaces-operator
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          network.openshift.io/policy-group: codeready-workspaces
  podSelector: {}
  policyTypes:
  - Ingress
